docs/Kubernetes/Deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: geoip
  namespace: default
  labels:
    app.kubernetes.io/name: geoip
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: geoip
  template:
    metadata:
      labels:
        app.kubernetes.io/name: geoip
    spec:
      serviceAccountName: geoip
      containers:
        - image: ghcr.io/codinux-gmbh/geoip
          name: geoip
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 500m
              memory: 500Mi
          startupProbe:
            httpGet:
              path: /health/startup
              port: http
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: geoip-data
              mountPath: /var/lib/geoip
      volumes:
        - name: geoip-data
          persistentVolumeClaim:
            claimName: geoip-data
---

apiVersion: v1
kind: Service
metadata:
  name: geoip
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: geoip
  ports:
    - port: 8080
      name: http
      targetPort: http
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoip
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: geoip-tls
spec:
  ingressClassName: nginx
  tls:
    - secretName: geoip-tls
      hosts:
        - api.example.com
  rules:
    - host: api.example.com
      http:
        paths:
          - path: /geoip
            pathType: Prefix
            backend:
              service:
                name: geoip
                port:
                  name: http
